--- a/haskell-helloworld.cabal
+++ b/haskell-helloworld.cabal
@@ -67,7 +67,9 @@ executable haskell-helloworld
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.16.4.0
+    build-depends:    base >=4.16.4.0,
+                      random,
+                      directory
 
     -- Directories containing source files.
     hs-source-dirs:   app
