--- a/haskell-helloworld.cabal
+++ b/haskell-helloworld.cabal
@@ -61,7 +61,7 @@ executable haskell-helloworld
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    Heh
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
